# FastAPI-Celery-Setup

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: app-ci.yaml  e2e-testing.yaml  worker-ci.yaml
app/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.test.txt  requirements.txt
app/api/: main.py  routes.py  schemas.py  settings.py  tasks.py
app/tests/: conftest.py  test_routes.py  utils.py
worker/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.test.txt  requirements.txt  run.sh
worker/app/: main.py  settings.py  tasks.py
worker/tests/: conftest.py  test_tasks.py
