[project]
name = "fastapi-celery-flower-example"
version = "0.0.1"
description = "Example of using Celery with FastAPI application in the containerized environment"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "fastapi>=0.129.0",
    "pydantic-settings>=2.13.0",
    "redis>=7.2.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
stubs = [
    "celery-types>=0.24.0",
]
test = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py312"
lint.extend-select = ["ALL"]
lint.ignore = ["D100", "D104", "D204", "COM812"]
exclude = [".venv"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [".venv/"]
files = ["."]
