[project]
name = "worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.2",
    "flower>=2.0.1",
    "redis>=7.2.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
stubs = [
    "celery-types>=0.24.0",
]
test = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[tool.ruff]
target-version = "py312"
lint.extend-select = ["ALL"]
lint.ignore = ["D100", "D104", "D204", "COM812"]
exclude = [".venv"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = [".venv/"]
files = ["."]

[tool.pytest.ini_options]
addopts = """
  --durations=10
  --durations-min=0.1
  --verbose
  --maxfail=1
"""